# zing-dcdn

./: .gitignore  README.md  opencode.jsonc
.opencode/plans/: 2026-06-01-walrus-p2p-mesh-design.md  2026-06-01-zing-mvp-implementation-plan.md  2026-06-17-fix-kad-provider-discovery.md  2026-06-18-wal-read-fee-economic-layer.md
.opencode/plugins/: notification.ts
contracts/zing_cdn/: .gitignore  Move.toml  Published.toml  README.md
contracts/zing_cdn/sources/: peer_vault.move  settlement.move  staking.move  utils.move
contracts/zing_cdn/tests/: integration_tests.move
docs/: api.md
manta/: .gitignore  Cargo.toml
manta/manta/: Cargo.toml
manta/manta-core/: Cargo.toml
manta/manta-core/src/: client.rs
manta/manta-core/src/cache/: pinning.rs
manta/manta-core/src/mesh/: mod.rs
manta/manta-core/src/p2p/: mod.rs  node.rs  protocol.rs
manta/manta-core/src/sui/: article.rs  epoch.rs
manta/manta-core/src/walrus/: mod.rs  verify.rs
manta/manta-core/tests/: mainnet.rs
manta/manta/src/: main.rs
zing/: Cargo.toml
zing-cdn/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  fly.toml  railway.toml
zing-cdn/docs/superpowers/plans/: 2026-06-02-p2p-swarm.md  2026-06-07-desktop-app.md
zing-cdn/docs/superpowers/specs/: 2026-06-02-p2p-swarm-design.md  2026-06-07-desktop-app-design.md
zing-cdn/zing-cdn/: Cargo.toml
zing-cdn/zing-cdn-core/: Cargo.toml
zing-cdn/zing-cdn-core/src/: client.rs  config.rs  lib.rs
zing-cdn/zing-cdn-core/src/cache/: mod.rs  store.rs
zing-cdn/zing-cdn-core/src/mesh/: reputation.rs  resolver.rs
zing-cdn/zing-cdn-core/src/p2p/: behaviour.rs  discovery.rs  handler.rs  mod.rs  node.rs  protocol.rs
zing-cdn/zing-cdn-core/src/sui/: client.rs  mod.rs  settlement.rs  wallet.rs
zing-cdn/zing-cdn-core/src/walrus/: verify.rs
zing-cdn/zing-cdn-core/tests/: kad_provider_test.rs  mainnet.rs  p2p_swarm.rs
zing-cdn/zing-cdn-gui/: Cargo.toml  Dioxus.toml  dev.sh  index.html
zing-cdn/zing-cdn-gui/src/: ipc.rs  lib.rs  main.rs
zing-cdn/zing-cdn-gui/src-tauri/: Cargo.toml  tauri.conf.json
zing-cdn/zing-cdn-gui/src-tauri/src/: api_http.rs  commands.rs  lib.rs  main.rs  state.rs
zing-cdn/zing-cdn-gui/src/components/: blob.rs  cache.rs  dashboard.rs  mod.rs  settings.rs  staking.rs  toast.rs
zing-cdn/zing-cdn/src/: config.rs  http.rs  main.rs
zing/zing-app/: Cargo.toml
zing/zing-app/src/: main.rs
zing/zing-core/: Cargo.toml
zing/zing-core/src/: lib.rs  types.rs
zing/zing-core/src/cache/: eviction.rs  pinning.rs  store.rs
zing/zing-core/src/mesh/: mod.rs  reputation.rs  resolver.rs
zing/zing-core/src/p2p/: discovery.rs  handler.rs  mod.rs  node.rs  protocol.rs
zing/zing-core/src/sui/: article.rs  client.rs  epoch.rs  mod.rs
zing/zing-core/src/walrus/: client.rs  mod.rs  verify.rs
zing/zing-core/tests/: mainnet.rs
