[workspace]
members = [
    "zing-cdn-core",
    "zing-cdn",
    "zing-cdn-gui/src-tauri",
]
exclude = ["zing-cdn-gui"]
resolver = "2"

[workspace.dependencies]
# Walrus (local fork via file:// git URL with pinned rev)
walrus-core = { git = "file:///Users/jareklin/dev/main/walrus", rev = "73eb7eb763561547148a8dd7a3044b46fe6c71c9", package = "walrus-core" }
walrus-sdk = { git = "file:///Users/jareklin/dev/main/walrus", rev = "73eb7eb763561547148a8dd7a3044b46fe6c71c9", package = "walrus-sdk" }
walrus-storage-node-client = { git = "file:///Users/jareklin/dev/main/walrus", rev = "73eb7eb763561547148a8dd7a3044b46fe6c71c9", package = "walrus-storage-node-client" }
walrus-sui = { git = "file:///Users/jareklin/dev/main/walrus", rev = "73eb7eb763561547148a8dd7a3044b46fe6c71c9", package = "walrus-sui" }

# Sui (matching Walrus's versions — these come transitively through Walrus)
# We only need the thin SDK types for our direct use
sui-sdk-types = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "5b41bc701525f1b94f1fe63008d4841bc6fb1065", features = ["hash", "serde"] }
sui-rpc = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "5b41bc701525f1b94f1fe63008d4841bc6fb1065" }

# P2P
libp2p = { version = "0.54", features = ["tokio", "quic", "kad", "gossipsub", "noise", "tcp", "yamux", "macros", "request-response", "identify", "ping"] }

# Storage (matching Walrus)
rocksdb = "0.22"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Crypto & Encoding
reed-solomon-simd = "3.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
bytes = "1"
lru = "0.12"
sha2 = "0.10"
hex = "0.4"

# Pin allocative to match Walrus's resolved version (0.3.4)
allocative = "0.3.4"