[workspace]
members = [
    "zing-cdn-core",
    "zing-cdn",
    "zing-cdn-gui/src-tauri",
]
exclude = ["zing-cdn-gui"]
resolver = "2"

[workspace.dependencies]
# Walrus (from GitHub with pinned rev)
walrus-core = { git = "https://github.com/MystenLabs/walrus.git", rev = "73eb7eb763561547148a8dd7a3044b46fe6c71c9", package = "walrus-core" }
walrus-sdk = { git = "https://github.com/MystenLabs/walrus.git", rev = "73eb7eb763561547148a8dd7a3044b46fe6c71c9", package = "walrus-sdk" }
walrus-storage-node-client = { git = "https://github.com/MystenLabs/walrus.git", rev = "73eb7eb763561547148a8dd7a3044b46fe6c71c9", package = "walrus-storage-node-client" }
walrus-sui = { git = "https://github.com/MystenLabs/walrus.git", rev = "73eb7eb763561547148a8dd7a3044b46fe6c71c9", package = "walrus-sui" }
walrus-utils = { git = "https://github.com/MystenLabs/walrus.git", rev = "73eb7eb763561547148a8dd7a3044b46fe6c71c9", package = "walrus-utils" }

# Sui (matching Walrus's versions — these come transitively through Walrus)
# We only need the thin SDK types for our direct use
sui-sdk-types = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "e494a36a76a0aab8c5d66d5557995faee5c1fb09", features = ["hash", "serde"] }
sui-crypto = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "e494a36a76a0aab8c5d66d5557995faee5c1fb09", features = ["ed25519"] }
sui-rpc = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "e494a36a76a0aab8c5d66d5557995faee5c1fb09" }
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "e494a36a76a0aab8c5d66d5557995faee5c1fb09", default-features = false, features = ["intents"] }
sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.73.0" }

# P2P
libp2p = { version = "0.54", features = ["tokio", "quic", "kad", "gossipsub", "noise", "tcp", "yamux", "macros", "request-response", "identify", "ping"] }

# Storage (matching Walrus)
rocksdb = "0.22"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Crypto & Encoding
reed-solomon-simd = "3.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
bytes = "1"
lru = "0.12"
sha2 = "0.10"
hex = "0.4"
prost-types = "0.14"

# Pin allocative to match Walrus's resolved version (0.3.4)
allocative = "=0.3.4"

[profile.dev]
opt-level = 0

[profile.dev.package.walrus-core]
opt-level = 3

[profile.dev.package.reed-solomon-simd]
opt-level = 3

[profile.dev.package.blake2]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3

[profile.dev.package.fastcrypto]
opt-level = 3

[profile.dev.package.ed25519-dalek]
opt-level = 3

[profile.dev.package.curve25519-dalek]
opt-level = 3