[package]
name = "zing-cdn-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Walrus SDK — brings in Sui transitively
walrus-sdk = { workspace = true }
walrus-core = { workspace = true }
walrus-storage-node-client = { workspace = true }
walrus-sui = { workspace = true }
walrus-utils = { workspace = true }
sui-sdk = { workspace = true }
sui-sdk-types = { workspace = true }
sui-crypto = { workspace = true }
sui-rpc = { workspace = true }
sui-transaction-builder = { workspace = true }

# P2P
libp2p = { workspace = true }

# Storage
rocksdb = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
toml = "0.8"
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Misc
bytes = { workspace = true }
lru = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = "0.22"

# Crypto & Encoding — comes transitively through walrus-core
# reed-solomon-simd = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"