[package]
name = "zing-app"
version = "0.1.0"
edition = "2021"

[dependencies]
zing-core = { path = "../zing-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# Desktop UI — will be enabled during integration
# dioxus = { version = "0.7", features = ["desktop"] }
# dioxus-desktop = { version = "0.7" }