[package]
name = "zing-core"
version = "0.1.0"
edition = "2021"

[dependencies]
walrus-core = { workspace = true }
walrus-sdk = { workspace = true }
walrus-storage-node-client = { workspace = true }
walrus-sui = { workspace = true }
sui-sdk = { workspace = true }
libp2p = { workspace = true }
rocksdb = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reed-solomon-simd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
lru = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"