[package]
name = "zing-cdn-gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "zing_cdn_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
zing-cdn-core = { path = "../../zing-cdn-core" }
walrus-core = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros", "net"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
libp2p = { version = "0.54", features = ["tokio", "quic", "kad", "gossipsub", "noise", "tcp", "yamux", "macros", "request-response", "identify", "ping"] }
dirs = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
